--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
 <body>
  <h1>This website shows the games I have created in Game 601.</h1>
+ <a href="AnOrdinaryLife.html">Twine Game</a>
 </body>
 </html>
