--- a/index.html
+++ b/index.html
@@ -3,16 +3,72 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>GAME 601 Portfolio</title>
-  <meta name="description" content="Game portfolio">
+  <title>GAME 601 Portfolio (Fall 2019)</title>
+  <meta name="description" content="What I made in GAME 601 (Game Programming) at American University in Fall 2019">
   <meta name="author" content="Doug Kent">
-
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
- <h1>This website shows the games I have created in Game 601.</h1>
- <a href="AnOrdinaryLife.html">Twine Game</a>
+  <div class="jumbotron m-0">
+    <h1 class="display-4">Doug Kent</h1>
+    <p class="lead">My games from GAME 601 - Game Prototyping at American University in Fall 2019</p>
+  </div>
+  <div class="card">
+    <div class="card-header h3">Game Modification: Mel</div>
+    <div class="card-body row">
+      <div class="col-4">
+        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+      </div>
+      <div class="col-6">
+        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+      </div>
+      <div class="col-2">
+        <a class="btn btn-primary btn-block" href="./Game Mel.doc" role="button">PLAY</a>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header h3">(Midterm) Non-Digital Game: Adventure School</div>
+    <div class="card-body row">
+      <div class="col-4">
+        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+      </div>
+      <div class="col-6">
+        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+      </div>
+      <div class="col-2">
+        <a class="btn btn-primary btn-block" href="." role="button">PLAY</a>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header h3">Visual Novel or Interactive Fiction: YOUR TITLE HERE</div>
+    <div class="card-body row">
+      <div class="col-4">
+        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+      </div>
+      <div class="col-6">
+        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+      </div>
+      <div class="col-2">
+        <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header h3">(Final) Digital Game: YOUR TITLE HERE</div>
+    <div class="card-body row">
+      <div class="col-4">
+        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+      </div>
+      <div class="col-6">
+        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+      </div>
+      <div class="col-2">
+        <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
