--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="card-header h3">Game Modification: Mel</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./Mel.PNG">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        Mel takes War and turns it upside down.  Instead of deciding each action by random chance, players are provided with a hand of five cards and must strategically make their decisions.  The player who makes the right decisions will end up claiming the deck of 52 cards.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="./Game Mel.doc" role="button">PLAY</a>
