--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="." role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="./Adventure School_Rulesdk.doc" role="button">PLAY</a>
       </div>
     </div>
   </div>
