--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="card-header h3">(Midterm) Non-Digital Game: Adventure School</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./AdventureSchoolCover.PNG">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+	Adventure School is a card game where you attempt to complete quests in order to prove you are the best student.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="./Adventure School_Rulesdk.doc" role="button">PLAY</a>
