--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header h3">(Final) Digital Game: YOUR TITLE HERE</div>
+    <div class="card-header h3">(Final) Digital Game: The Disposed</div>
     <div class="card-body row">
       <div class="col-4">
         <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        Solve puzzles, while playing as a robot and rabbit.
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="./https://dk5000p.itch.io/the-disposed" role="button">PLAY</a>
       </div>
     </div>
   </div>
