--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         Solve puzzles, while playing as a robot and rabbit.
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./https://dk5000p.itch.io/the-disposed" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="https://dk5000p.itch.io/the-disposed" role="button">PLAY</a>
       </div>
     </div>
   </div>
