--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="card-header h3">(Final) Digital Game: The Disposed</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./disposed.PNG">
       </div>
       <div class="col-6">
         Solve puzzles, while playing as a robot and rabbit.
