--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     <div class="card-header h3">Visual Novel or Interactive Fiction: YOUR TITLE HERE</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./Leprechaun.PNG">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        Go through your everyday life until something magical changes everything.
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="https://dk5000p.itch.io/an-ordinary-life" role="button">PLAY</a>
       </div>
     </div>
   </div>
