--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header h3">Visual Novel or Interactive Fiction: YOUR TITLE HERE</div>
+    <div class="card-header h3">Visual Novel or Interactive Fiction: An Ordinary Life</div>
     <div class="card-body row">
       <div class="col-4">
         <img class="img-fluid" src="./Leprechaun.PNG">
