--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="card-header h3">Visual Novel or Interactive Fiction: An Ordinary Life</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./Leprechaun.PNG">
+        <img class="img-fluid" src="./Leprechaun.png">
       </div>
       <div class="col-6">
         Go through your everyday life until something magical changes everything.
